<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pets.FilterActivity">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFB300"
        android:text="FILTER FRAGMENT" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="150dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="35dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="SHELTER"
        android:textSize="35dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_pets" />

    <TextView
        android:id="@+id/filter"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="30dp"
        android:text="FILTER"
        android:gravity="center"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="Type Of Pet"
        android:textSize="30dp" />

    <RadioButton
        android:id="@+id/dogfilter"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:text="DOG" />

    <RadioButton
        android:id="@+id/catfilter"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="230dp"
        android:text="CAT" />

    <RadioButton
        android:id="@+id/otherfilter"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="260dp"
        android:text="OTHER" />
    <RadioButton
        android:id="@+id/Zero"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="300dp"
        android:text="0-5" />

    <RadioButton
        android:id="@+id/five"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="330dp"
        android:text="5-9" />

    <RadioButton
        android:id="@+id/Nine"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="360dp"
        android:text="9+" />

    <TextView
        android:id="@+id/ageOfpet"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:text="Age of Pet"
        android:textSize="30dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginStart="20dp"
        android:text="Go Back"
        android:textSize="18sp"
        android:textStyle="bold"
         />




</RelativeLayout>