<resources>
    <string name="app_name">Pawfinder</string>
    <string name="title_pets">Pets</string>
    <string name="title_shelters">Shelters</string>
    <string name="title_lost">Lost</string>
    <string name="title_profile">Profile</string>
    <string name="facebook_app_id">359285832043517</string>
    <string name="fb_login_protocol_scheme">fb359285832043517</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>