<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_pets"
        android:icon="@drawable/ic_pets"
        android:title="@string/title_pets" />

    <item
        android:id="@+id/navigation_shelters"
        android:icon="@drawable/ic_location"
        android:title="@string/title_shelters" />

    <item
        android:id="@+id/navigation_lost"
        android:icon="@drawable/ic_search"
        android:title="@string/title_lost" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />
</menu>