<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/paw_image_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:transitionName="paw_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050"
            app:srcCompat="@drawable/ic_pets" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registercard"
            android:layout_width="365dp"
            android:layout_height="450dp"
            android:layout_margin="15dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/password_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="235dp"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="Sign In"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/registertxt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="190dp"
                android:text="CREATE A NEW ACCOUNT"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/leftLine"
                android:layout_width="131dp"
                android:layout_height="2dp"
                android:background="#DBDBDB"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="157dp"
                android:ems="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/rightLine"
                android:layout_width="131dp"
                android:layout_height="2dp"
                android:background="#DBDBDB"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="157dp"
                android:ems="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:text="OR"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/google_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="80dp"
                android:drawableLeft="@drawable/google_icon"
                android:drawablePadding="1sp"
                android:padding="10dp"
                android:text="Sign In With Google"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="30dp"
                android:drawableLeft="@drawable/facebook_icon"
                android:drawablePadding="1sp"
                android:padding="10dp"
                android:text="  Sign In With Facebook"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>